fix: missing white spaces & css fixes

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -74,7 +74,7 @@ button:hover {
 }
 .TopTwoColumns {
   display: flex;
-  height: 40vh;
+  min-height: 40vh;
   width: 100%;
   justify-content: center;
   svg {
